Fixed color stuck when toggling dark mode

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -48,6 +48,7 @@
     }
     &__svg {
         width: 4rem;
+        transform: rotate(0deg);
         transition: ease all .5s;
         
     }
@@ -58,8 +59,10 @@
         font-weight: 600;
         font-size: 1.2em;
         text-transform: uppercase;
+        color: var(--c-texto);
     }
     &__sub {
+        color: var(--c-texto);
     }
     &__title{
         @include flex(row, nowrap, flex-start, center);
